front: Added max-width to prevent overflow on local websites, updated bridge start information text visibility

--- a/www/static/css/theme.css
+++ b/www/static/css/theme.css
@@ -416,4 +416,5 @@ h1 {
 
 .not-www canvas {
     width: unset;
+    max-width: 100vw;
 }
